--- a/index.ipynb
+++ b/index.ipynb
@@ -34,7 +34,9 @@
     "# bytes.fromhex to get the binary block\n",
     "bin_block = bytes.fromhex(hex_block)\n",
     "# create a stream using BytesIO\n",
+    "stream = BytesIO(bin_block)\n",
     "# parse the block\n",
+    "b = Block.parse(st)\n",
     "# get the version\n",
     "# rightshift 29 (version >> 29) and see if it's equal to 0b001 for BIP9\n",
     "# see if bit 4 (version >> 4) from the right is set ( & 1) for BIP91\n",
