--- a/index.ipynb
+++ b/index.ipynb
@@ -40,8 +40,9 @@
     "# get the version\n",
     "version = b.version\n",
     "# rightshift 29 (version >> 29) and see if it's equal to 0b001 for BIP9\n",
-    "print(version >)\n",
+    "print(version >> 29 == 0b001)\n",
     "# see if bit 4 (version >> 4) from the right is set ( & 1) for BIP91\n",
+    "print(version >> 4 & 1 == )\n",
     "# see if bit 1 (version >> 1) from the right is set ( & 1) for BIP141"
    ]
   },
