automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -20,9 +20,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "# Version Signaling Example\n",
     "\n",
@@ -42,8 +52,9 @@
     "# rightshift 29 (version >> 29) and see if it's equal to 0b001 for BIP9\n",
     "print(version >> 29 == 0b001)\n",
     "# see if bit 4 (version >> 4) from the right is set ( & 1) for BIP91\n",
-    "print(version >> 4 & 1 == )\n",
-    "# see if bit 1 (version >> 1) from the right is set ( & 1) for BIP141"
+    "print(version >> 4 & 1 == 1)\n",
+    "# see if bit 1 (version >> 1) from the right is set ( & 1) for BIP141\n",
+    "print( version >> 1 & 1 == 1)"
    ]
   },
   {
@@ -77,6 +88,7 @@
     "        # BIP9 is signalled if the top 3 bits are 001\n",
     "        # remember version is 32 bytes so right shift 29 (>> 29) and see if\n",
     "        # that is 001\n",
+    "        return self.version >> 29 \n",
     "        pass\n",
     "\n",
     "    def bip91(self):\n",
