--- a/index.ipynb
+++ b/index.ipynb
@@ -94,13 +94,13 @@
     "        '''Returns whether this block is signaling readiness for BIP91'''\n",
     "        # BIP91 is signalled if the 5th bit from the right is 1\n",
     "        # shift 4 bits to the right and see if the last bit is 1\n",
-    "        return self.version >> 4 \n",
+    "        return self.version >> 4 & 1 == 1\n",
     "\n",
     "    def bip141(self):\n",
     "        '''Returns whether this block is signaling readiness for BIP141'''\n",
     "        # BIP91 is signalled if the 2nd bit from the right is 1\n",
     "        # shift 1 bit to the right and see if the last bit is 1\n",
-    "        pass"
+    "        return self.veresion >> 1 & "
    ]
   }
  ],
